--- a/index.html
+++ b/index.html
@@ -12,13 +12,78 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <title>Boostrap Starter Page</title>
+    <title></title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
+
   </head>
 <body>
+  <header>
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+            data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="index.html">Food,LLC</a>
+        </div>
 
-  <h1>Hello Coursera!</h1>
+        <div class="collapse navbar-collapse" id="collapsable-nav">
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+
+            <li class="text-center active">
+              <a href="#section-1">Chicken </a>
+            </li>
+
+            <li class="text-center active">
+              <a href="#section-2">Beef </a>
+            </li>
+
+            <li class="text-center active">
+              <a href="#section-3">Sushi </a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- End of Nav -->
+  </header> 
+  <!-- End of Navbar -->
+
+  <div>
+    <h2 class="text-center">Our Menu</h2>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <section id="section-1">
+          <h3 class="text-center">Chicken</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus nobis, recusandae architecto incidunt aliquid aliquam numquam? Debitis magnam excepturi doloribus vitae exercitationem placeat. Eos modi nulla perferendis distinctio dolorem ipsam? Voluptate eum non molestiae deleniti placeat vel perferendis magnam ipsa alias porro, incidunt ipsum excepturi error tenetur natus exercitationem sed, tempora optio mollitia est beatae itaque. Esse quaerat cum optio, sequi rem ab? Recusandae, fugit qui vel sit ipsa aliquid cumque repellat dolorum, nobis facere esse velit nostrum explicabo laudantium rerum provident aperiam itaque reprehenderit beatae quidem molestias quos! Doloribus molestias quis doloremque iure sapiente, magni dignissimos laborum officiis quasi velit accusamus consequuntur amet aspernatur fugit fuga corporis ratione explicabo iusto quidem inventore dolorem accusantium perferendis. Totam odit quas possimus commodi animi libero voluptatum ducimus, ut quod dolores, in obcaecati tempora eveniet ipsam natus. Inventore, neque repudiandae! Quod itaque consectetur, adipisci aliquid iusto debitis. Qui, veritatis. Hic totam, laudantium dicta exercitationem similique incidunt sint minima ab sequi, eaque error cumque tenetur, quas maiores quo itaque facilis! Officiis, quisquam. Laborum obcaecati iure doloremque, laudantium ex quia cumque animi tempore fuga totam reprehenderit. Adipisci omnis vel sequi quo iusto, quidem, voluptas, dignissimos nihil atque dicta similique! Dicta culpa quas quos provident repudiandae?<br>(End of Chicken section)<a href="#top"> Back To Top</a></p>
+        </section>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <section id="section-2">
+          <h3 class="text-center">Beef</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro omnis sapiente nulla numquam illo rerum consequatur veritatis. Dicta in commodi perspiciatis, obcaecati nemo molestias unde veritatis atque? Tenetur saepe odio nesciunt quaerat omnis voluptatem fuga nostrum ipsam debitis eveniet, error cumque provident fugiat ipsa cum harum assumenda expedita. Aut facere ad eligendi esse eos officiis beatae asperiores obcaecati possimus laboriosam! Minima, ab architecto. Aliquam incidunt voluptatem quisquam recusandae dolores obcaecati culpa maxime. Delectus eveniet blanditiis inventore iste eum perspiciatis eligendi. Ipsa itaque a dolorum placeat dolorem eligendi ex, tempore dolore harum nobis et? Alias voluptate fuga eum dolores numquam officiis laboriosam, enim nihil eligendi illo delectus incidunt laudantium. Optio beatae, facilis sequi unde commodi reiciendis atque excepturi inventore aspernatur labore numquam consequuntur, alias perferendis pariatur, similique cumque officiis magni minus libero ipsa sapiente veritatis laboriosam veniam? Voluptate facere natus laudantium iste, tenetur adipisci expedita reprehenderit deserunt debitis! Accusantium quae repellendus, eos nihil eum nisi? Fugit maiores, cumque necessitatibus vel mollitia inventore, quisquam exercitationem accusantium eligendi dignissimos perferendis repudiandae, officiis commodi minus placeat ipsa eveniet vero sed dolor cupiditate nemo culpa dolorem aspernatur iusto? Necessitatibus numquam ratione animi quas tempore iure. Delectus voluptates nam perferendis labore animi voluptate placeat illo quas?<br>(End of Chicken section)<a href="#top"> Back To Top</a></p>
+        </section>
+      </div>
+      <div class="col-xs-12 col-sm-12 col-md-4">
+        <section id="section-3">
+          <h3 class="text-center">Sushi</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex adipisci repellendus officia ab, modi quibusdam corrupti et veniam numquam placeat voluptas. Recusandae sint cupiditate, tempore non veritatis delectus nemo unde laudantium exercitationem, consequatur quisquam, iste praesentium numquam commodi sit minus voluptatem perspiciatis reprehenderit accusamus? Itaque nihil harum tempore unde aliquam facere voluptas vel dolor et, similique vitae accusamus voluptatem, praesentium cumque veritatis magnam impedit earum deleniti natus dolorum! Doloremque explicabo, aperiam corporis nisi quas, quam cupiditate et dolores voluptatibus consectetur eveniet mollitia ipsa tempore quasi officiis necessitatibus aliquid obcaecati ratione aspernatur tenetur placeat unde distinctio. Accusantium odit, porro sapiente nostrum beatae harum aliquid voluptatibus! Sint tenetur doloremque delectus praesentium, maiores asperiores, voluptatem itaque dolores officia blanditiis, iste natus vitae! Iure laudantium debitis autem dolore, ipsa sapiente assumenda, ullam neque fugiat nesciunt soluta. Et ullam animi cupiditate velit quod ad incidunt blanditiis deleniti dolor, placeat officiis architecto, nesciunt reiciendis in! Nobis obcaecati saepe temporibus repellendus veritatis sit pariatur vitae quisquam rem voluptatem dolore eligendi aliquam autem cum molestias, quae aliquid alias non placeat dolorum iusto natus eaque. Ex animi magni placeat sunt! Nostrum qui aliquid ipsam excepturi ullam neque doloremque nesciunt est, pariatur voluptatem repellendus iusto dolores veniam aspernatur porro molestias!<br>(End of Chicken section)<a href="#top"> Back To Top</a></p>
+        </section>
+      </div>
+    </div>
+    <!-- End of Row -->
+  </div>
+  <!-- End of Container-fluid -->
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
